refactor: align all classes with real Disruptor source code
Sequence:
- Replace long padding fields with 3-tier byte padding inheritance
  (LhsPadding -> Value -> RhsPadding), matching Disruptor's exact structure
- Replace Unsafe with VarHandle (JDK 9+); upgrade pom to JDK 17
- addAndGet uses VarHandle.getAndAdd instead of CAS loop
- get()/set()/setVolatile() use acquire/release/full fences explicitly

WaitStrategy:
- Add dependentSequence param to waitFor() signature (4-arg, matching source)

BlockingWaitStrategy:
- Replace ReentrantLock with synchronized(mutex) + Object.wait/notifyAll
- Add Thread.onSpinWait() in second-phase spin loop

BusySpinWaitStrategy / YieldingWaitStrategy:
- Add Thread.onSpinWait()
- Fix YieldingWaitStrategy: return original counter (0) after yield, not SPIN_TRIES

AlertException:
- Replace super(..., false) suppression with override of fillInStackTrace()

SequenceBarrier:
- Pass dependentSequence to waitStrategy.waitFor(); add isAlerted()
- Extract MinimumSequence helper for multi-upstream aggregation

Sequencer:
- Add LockSupport.parkNanos(1L) in back-pressure spin loop
- Fix wrap-around detection: check cachedValue > nextValue condition

RingBuffer:
- Switch padding to byte fields (56B front + 56B rear), matching Disruptor
- Keep BUFFER_PAD=32 array offset to protect array elements from false sharing

Tests: expand from 8 to 26 cases covering Sequence atomics, WaitStrategy
unit tests, SequenceBarrier alert lifecycle, Sequencer back-pressure,
BatchEventProcessor halt, RingBuffer slot reuse, and pipeline ordering guarantee